--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,19 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+.pnpm-store
+
+# Build
 dist
 dist-ssr
+build
+
+# Local Environment & Secrets
+.env
+.env.test
+.env.production
 *.local
 
 # Editor directories and files
@@ -22,3 +32,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Testing
+coverage
+test-results/
+
+# System
+Thumbs.db
+ehthumbs.db
+Desktop.ini
